--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta property="og:site_name" content="Hover.css"/>
 		<meta property="og:title" content="Hover.css - A collection of CSS3 powered hover effects" />
 		<title>Hover.css - A collection of CSS3 powered hover effects</title>
+		<link rel="stylesheet" href="index.css">
+		<script src="/js/js.js"></script>
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 			body {margin: 0; padding: 0; font-family: 'Source Code Pro', monospace; color: #000; background: #F0EDE6;}
