--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="utf-8">
-		<meta property="og:image" content="http://ianlunn.github.io/Hover/hover.jpg" />
-		<meta property="og:site_name" content="Hover.css"/>
-		<meta property="og:title" content="Hover.css - A collection of CSS3 powered hover effects" />
-		<title>Hover.css - A collection of CSS3 powered hover effects</title>
-		<link rel="stylesheet" href="index.css">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>📌💘👋🌈🧠💛🎵🙊🌞🌷</title>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="index.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 		<script src="/js/js.js"></script>
-	</head>
-	<body>
-		<div class="main">
-			<h1>Hover.css <a href="html/hover.html" class="sup" title="hover-css 바로가기">V2</a></h1>
-		</div>
-	</body>
+</head>
+<body>
+	<div class="main main-container">
+		<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
+	</div>
+</body>
 </html>
