커서이벤트 추가

--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
 	<title>📌💘👋🌈🧠💛🎵🙊🌞🌷</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="index.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-		<script src="/js/js.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+	<script src="/js/ScrollTrigger.min.js"></script>
+    <script src="/js/gsap.min.js"></script>
+	<script src="/js/js.js"></script>
 </head>
-<body>
-	<div class="main main-container">
-		<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
+	<div class="main main-container wrap">
+		<div class="cursor">
+			<div class="cursor-inner">
+				<div class="cursor-pointer">
+					<em class="arrow"></em>
+				</div>
+			</div>
+		</div>
+		<div class="intro-wrap">
+			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
+			<header class="header">
+			<!-- 텍스트 에니메이션 s -->
+				<div class="scrolling-wrap">
+					<div class='scrolling-text'>
+						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+					</div>
+				</div>
+			<!-- 텍스트 에니메이션 e -->
+			</header>
+		</div>
 	</div>
 </body>
 </html>
