--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="intro-wrap">
 			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
-			<header class="header">
+			<div class="scrolling">
 			<!-- 텍스트 에니메이션 s -->
 				<div class="scrolling-wrap">
 					<div class='scrolling-text'>
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 			<!-- 텍스트 에니메이션 e -->
-			</header>
+			</div>
 		</div>
 	</div>
 </body>
