마우스커서

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="cursor">
 			<div class="cursor-inner">
 				<div class="cursor-pointer">
-					<em class="arrow"></em>
+					<em class="arrow">💖</em>
 				</div>
 			</div>
 		</div>
