--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 			<!-- 텍스트 에니메이션 s -->
 				<div class="scrolling-wrap">
 					<div class='scrolling-text'>
-						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
-						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
-						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
-						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
-						<p class="text">GYEONGGI-DO SPORTS FESTIVAL&ensp;·&ensp;</p>
+						<p class="text">🌞 😃 😄 😁 😆 🥨 🔥 ⭐ 🌈 💐</p>
+						<p class="text">🤩 😵 😵 🥴 😲 🤯 🤚 🖐 😍 🥰</p>
+						<p class="text">🧡 💛 💚 💙 💜 🤎 🖤 🤍 💘 🎀</p>
+						<p class="text">🎯 🌌 🍑 🍒 🎄 🍅 🤡 😜 😈 🤑</p>
+						<p class="text">😅 😂 🤣 😇 😉 🍳 👀 🐵 🌎 ✨</p>
 					</div>
 				</div>
 			<!-- 텍스트 에니메이션 e -->
