디자인작업중

--- a/index.html
+++ b/index.html
@@ -24,15 +24,21 @@
 			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
 			<div class="scrolling">
 			<!-- 텍스트 에니메이션 s -->
-				<div class="scrolling-wrap">
+				<!-- <div class="scrolling-wrap">
 					<div class='scrolling-text'>
-						<p class="text">🌞 😃 😄 😁 😆 🥨 🔥 ⭐ 🌈 💐</p>
-						<p class="text">🤩 😵 😵 🥴 😲 🤯 🤚 🖐 😍 🥰</p>
-						<p class="text">🧡 💛 💚 💙 💜 🤎 🖤 🤍 💘 🎀</p>
-						<p class="text">🎯 🌌 🍑 🍒 🎄 🍅 🤡 😜 😈 🤑</p>
-						<p class="text">😅 😂 🤣 😇 😉 🍳 👀 🐵 🌎 ✨</p>
+						<p class="text">글자테스트입니다.</p>
+						<p class="text">글자테스트입니다2.</p>
+						<p class="text">글자테스트입니다3.</p>
+						<p class="text">글자테스트입니다4.</p>
+						<p class="text">글자테스트입니다5.</p>
+						<p class="text">글자테스트입니다6.</p>
+						<!-- <p class="text">🌞 😃 😄 😁 😆 🥨 🔥 ⭐ 🌈 💐&ensp;</p>
+						<p class="text">🤩 😵 🥴 😲 🤯 🤚 🖐 😍 🥰&ensp;</p>
+						<p class="text">🧡 💛 💚 💙 💜 🤎 🖤 🤍 💘 🎀&ensp;</p>
+						<p class="text">🎯 🌌 🍑 🍒 🎄 🍅 🤡 😜 😈 🤑&ensp;</p> -->
+						<!-- <p class="text">😅 😂 🤣 😇 😉 🍳 👀 🐵 🌎 ✨</p> -->
 					</div>
-				</div>
+				</div> 
 			<!-- 텍스트 에니메이션 e -->
 			</div>
 		</div>
