테스트커밋

--- a/index.html
+++ b/index.html
@@ -20,11 +20,35 @@
 				</div>
 			</div>
 		</div>
-		<div class="intro-wrap">
+		<section class="flex scene">
+			<h1 class="header">
+				<span>Powodzenia, Kasiu!</span>
+			</h1>
+			<div class="confetti"></div>
+		</section>
+		<ul class="menu">
+			<li>LET'S HAVE</li>
+			<li>SOME FUN</li> 
+			<li>THIS BEAT</li>
+			<li>IS SICK</li>
+			<li>I WANNA TAKE A RIDE</li>
+			<li>ON YOUR DISCO STICK</li>
+		</ul>
+		<div class="container">
+		  <ul class="menu-mask">
+			<li>LET'S HAVE</li>
+			<li>SOME FUN</li>
+			<li>THIS BEAT</li>
+			<li>IS SICK</li>
+			<li>I WANNA TAKE A RIDE</li>
+			<li>ON YOUR DISCO STICK</li>
+		  </ul>
+		</div>
+		
+		<!-- <div class="intro-wrap">
 			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
 			<div class="scrolling">
-			<!-- 텍스트 에니메이션 s -->
-				<!-- <div class="scrolling-wrap">
+				<div class="scrolling-wrap">
 					<div class='scrolling-text'>
 						<p class="text">글자테스트입니다.</p>
 						<p class="text">글자테스트입니다2.</p>
@@ -32,16 +56,15 @@
 						<p class="text">글자테스트입니다4.</p>
 						<p class="text">글자테스트입니다5.</p>
 						<p class="text">글자테스트입니다6.</p>
-						<!-- <p class="text">🌞 😃 😄 😁 😆 🥨 🔥 ⭐ 🌈 💐&ensp;</p>
+						<p class="text">🌞 😃 😄 😁 😆 🥨 🔥 ⭐ 🌈 💐&ensp;</p>
 						<p class="text">🤩 😵 🥴 😲 🤯 🤚 🖐 😍 🥰&ensp;</p>
 						<p class="text">🧡 💛 💚 💙 💜 🤎 🖤 🤍 💘 🎀&ensp;</p>
-						<p class="text">🎯 🌌 🍑 🍒 🎄 🍅 🤡 😜 😈 🤑&ensp;</p> -->
-						<!-- <p class="text">😅 😂 🤣 😇 😉 🍳 👀 🐵 🌎 ✨</p> -->
+						<p class="text">🎯 🌌 🍑 🍒 🎄 🍅 🤡 😜 😈 🤑&ensp;</p>
+						<p class="text">😅 😂 🤣 😇 😉 🍳 👀 🐵 🌎 ✨</p>
 					</div>
 				</div> 
-			<!-- 텍스트 에니메이션 e -->
 			</div>
-		</div>
+		</div> -->
 	</div>
 </body>
 </html>
