--- a/index.html
+++ b/index.html
@@ -20,15 +20,9 @@
 				</div>
 			</div>
 		</div>
-		<section class="flex scene">
-			<h1 class="header">
-				<span>Powodzenia, Kasiu!</span>
-			</h1>
-			<div class="confetti"></div>
-		</section>
 		<ul class="menu">
-			<li>LET'S HAVE</li>
-			<li>SOME FUN</li> 
+			<li>HOVER🖱</li>
+			<li>BBONGBBONG🎉</li> 
 			<li>THIS BEAT</li>
 			<li>IS SICK</li>
 			<li>I WANNA TAKE A RIDE</li>
@@ -36,8 +30,8 @@
 		</ul>
 		<div class="container">
 		  <ul class="menu-mask">
-			<li>LET'S HAVE</li>
-			<li>SOME FUN</li>
+			<li><a href="html/hover.html" target="_blank" title="hover써머리">HOVER🖱</a></li>
+			<li><a href="html/bbongbbong.html" target="_blank" title="뿅뿅아이콘"><li>BBONGBBONG🎉</li> </a></li> 
 			<li>THIS BEAT</li>
 			<li>IS SICK</li>
 			<li>I WANNA TAKE A RIDE</li>
