--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<li>ON YOUR DISCO STICK</li>
 		  </ul>
 		</div>
-		
+		<!-- <p class="ani">🍒</p> -->
 		<!-- <div class="intro-wrap">
 			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
 			<div class="scrolling">
