--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="index.css">
 	<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-	<script src="/js/ScrollTrigger.min.js"></script>
-    <script src="/js/gsap.min.js"></script>
-	<script src="/js/js.js"></script>
+	<script src="js/ScrollTrigger.min.js"></script>
+    <script src="js/gsap.min.js"></script>
+	<script src="js/js.js"></script>
 </head>
 	<div class="main main-container wrap">
 		<div class="cursor">
