--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 		</div>
-		<ul class="menu">
+		<!-- <ul class="menu">
 			<li>HOVER🖱</li>
 			<li>BBONGBBONG🎉</li> 
 			<li>THIS BEAT</li>
@@ -37,7 +37,7 @@
 			<li>I WANNA TAKE A RIDE</li>
 			<li>ON YOUR DISCO STICK</li>
 		  </ul>
-		</div>
+		</div> -->
 		<!-- <p class="ani">🍒</p> -->
 		<!-- <div class="intro-wrap">
 			<h1>Hover.css <a href="html/hover.html" target="_blank" class="sup" title="hover-css 바로가기">V2</a></h1>
