소스정리중

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="js/gsap.min.js"></script>
 	<script src="js/js.js"></script>
 </head>
-	<div class="main main-container wrap">
+<body>
+	<div class="main-container">
 		<div class="cursor">
 			<div class="cursor-inner">
 				<div class="cursor-pointer">
